freesia/manifests/grist/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: grist
  labels:
    app.kubernetes.io/name: grist
