freesia/manifests/grist/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grist
  labels:
    app.kubernetes.io/name: grist
    app.kubernetes.io/instance: grist
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: grist
      app.kubernetes.io/instance: grist
  template:
    metadata:
      labels:
        app.kubernetes.io/name: grist
        app.kubernetes.io/instance: grist
    spec:
      containers:
      - name: grist
        image: gristlabs/grist:latest
        ports:
        - containerPort: 8484
          name: http
        volumeMounts:
        - name: data
          mountPath: /persist
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 1Gi
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: grist-data
