freesia/manifests/grist/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grist
spec:
  ports:
  - name: http
    port: 8484
    targetPort: 8484
  selector:
    app: grist
