freesia/manifests/grist/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grist
  namespace: grist
spec:
  routes:
  - match: Host(`grist.harvestasya.org`)
    kind: Rule
    priority: 10
    middlewares:
    - name: auto-detect-content-type
      namespace: traefik
    services:
    - name: grist
      port: http
